Mobile overflow bug fix
Potential fix for overflow bug causing large hamburger menu on mobile. Unable to replicate on chrome device emulator

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+html,body
+{
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
 .full-page-canvas {
     margin: 0;
     padding: 0;
